--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         }
     ],
     "require": {
-        "slim/slim": "^4.0"
+        "slim/slim": "^4.0",
+        "scorninpc/slim-smarty-view": "^2.0"
     },
     "autoload": {
         "psr-4": {
