--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "slim/slim": "^4.0",
-        "scorninpc/slim-smarty-view": "dev-main"
+        "scorninpc/slim-smarty-view": "^2.0"
     },
     "autoload": {
         "psr-4": {
