--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "scorninpc/slim-mvc",
+    "version": "1.0.1",
     "type": "library",
     "description": "Slim Framework 4 bootstrap to call simple MVC structure",
     "keywords": ["slim","framework","slim 4","bootstrap","mvc"],
